--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-helmet": "^6.1.0",
     "react-is": ">= 16.8.0",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.1",
