--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-is": ">= 16.8.0",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.1",
+    "sweetalert2": "^10.15.6",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
