--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "firebase": "^8.3.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-helmet": "^6.1.0",
-    "react-is": ">= 16.8.0",
-    "react-router-dom": "^5.2.0",
-    "styled-components": "^5.2.1",
-    "sweetalert2": "^10.15.6",
-    "webfontloader": "^1.6.28"
+    "date-fns": "2.19.0",
+    "firebase": "8.3.1",
+    "moment": "^2.29.1",
+    "react": "17.0.2",
+    "react-day-picker": "7.4.10",
+    "react-dom": "17.0.2",
+    "react-helmet": "6.1.0",
+    "react-is": "17.0.2",
+    "react-router-dom": "5.2.0",
+    "styled-components": "5.2.1",
+    "sweetalert2": "10.15.7",
+    "webfontloader": "1.6.28"
   },
   "scripts": {
     "start": "react-scripts start",
